Add CORS support

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 ENVIRONMENT=dev
 
+DB_HOST=db
 DB_DATABASE=api_db
 DB_USERNAME=docker_root
 DB_PASSWORD=secret
+DB_CHARSET=utf8mb4
+
+CLIENT_URL=http://localhost:5173
